fixed row spacing uneven problem

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ body {
     width: 80%;
     z-index: 2;
     padding: 20px;
-    padding-left: 100px;
 }
 
 .title {
